[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc-print = "0.1.22"
regex = "1.10.2"
tetra = "0.8.0"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "aoc23bench"
harness = false

[profile.release]
debug = true
